# FractalChanneling

./: .gitignore  Authors.md  Cargo.toml  config.toml  setup.sh
.githooks/: pre-commit
.github/workflows/: audit.yml  test_lint.yml
docs/: FullDoc.tex  MasTODOnt.tex  SAF.tex  System.tex  system.tex  tex_builder.sh
docs/modules/: bnc.tex  flow.tex  fun.tex  system.tex
docs/prefix/: funcs.tex  predoc.tex
src/: main.rs
src/data_ops/: json_local.rs  mod.rs  toml.rs
src/data_ops/access_files/: Cargo.toml
src/data_ops/access_files/src/: acc_json.rs  acc_toml.rs  lib.rs
src/data_ops/access_files/test_resources/: db.json  testconf.toml
src/data_ops/read_files/: Cargo.toml
src/data_ops/read_files/src/: config.rs  lib.rs
src/db/: json_local.rs
src/interface/: base.rs  cmdl.rs  mod.rs
