[package]
name = "todo-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0.67"
strum = "0.21"
strum_macros = "0.21"
toml = "0.5.8"